--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=qdXxp0"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=qdXxp0" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=UjuF8j"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=UjuF8j" type="text/css">
 
   
   
@@ -106,7 +106,7 @@ a,a:hover,a:visited{color:#ddd;text-decoration:none;}
       <li><span class="simp-source" data-src="https://ice9.securenetsystems.net/SHADI">8. Radio Shadi</span><span class="simp-desc">Persian Music</span></li>
       <li><span class="simp-source" data-src="https://stream-171.zeno.fm/2jwyo983y49vv">9. Radio AvazFarsi</span><span class="simp-desc">Persian Music</span></li>
       <li><span class="simp-source" data-src="https://sarcheshmeh.awsvps.com/stream">10. Radio Sarcheshmeh</span><span class="simp-desc">Persian Music</span></li>
-      <li><span class="simp-source" data-src="http://voa-16.akacast.akamaistream.net/7/316/322028/v1/ibb.akacast.akamaistream.net/voa-16.m3u">11. Radio Farda</span><span class="simp-desc">Persian Music and News</span></li>
+      <li><span class="simp-source" data-src="http://voa-16.akacast.akamaistream.net/7/316/322028/v1/ibb.akacast.akamaistream.net/voa-16.m3u">11. Radio Farda</span><span class="simp-desc">Persian Music/News</span></li>
       <li><span class="simp-source" data-src="https://n0f.radiojar.com/dfnrphnr5f0uv?rj-ttl=5&amp;rj-tok=AAABmSY-oh4AHtmWmjydCeWDsA">12. Radio Iran International</span><span class="simp-desc">Persian News</span></li>
       <li><span class="simp-source" data-src="https://radio.mp3islam.com/listen/abdulbasit/radio.mp3">13. Radio Quran</span><span class="simp-desc">Quran</span></li>
   
@@ -121,7 +121,7 @@ a,a:hover,a:visited{color:#ddd;text-decoration:none;}
       <li><span class="simp-source" data-src="http://icecast.omroep.nl/funx-arab-bb-mp3">7. Radio FunX Arab</span><span class="simp-desc">Arabic Music</span></li>
       <li><span class="simp-source" data-src="https://stream.zeno.fm/zsgrfxg71s8uv?dot-uid=0c64220300da605a9c09c645&amp;amb-uid=2613553414245283539&amp;triton-uid=cookie%3A51e3840d-9f2d-4861-81dc-ecd56c88a96e&amp;aw_0_req_lsid=b192f0fe28e56731dab30eb67d7e9012">8. Radio Om Kolthum</span><span class="simp-desc">Om Kolthum Music</span></li>
       <li><span class="simp-source" data-src="https://stream.zeno.fm/8a4eqkd0pnhvv?dot-uid=0c64220300da605a9c09c645&amp;amb-uid=2613553414245283539&amp;triton-uid=cookie%3A51e3840d-9f2d-4861-81dc-ecd56c88a96e&amp;aw_0_req_lsid=b192f0fe28e56731dab30eb67d7e9012">9. Radio Abdelhalim</span><span class="simp-desc">Abdelhalim Music</span></li>
-      <li><span class="simp-source" data-src="https://montecarlodoualiya128k.ice.infomaniak.ch/mc-doualiya.mp3">10. Radio Monte Carlo</span><span class="simp-desc">Arabic Music and News</span></li>
+      <li><span class="simp-source" data-src="https://montecarlodoualiya128k.ice.infomaniak.ch/mc-doualiya.mp3">10. Radio Monte Carlo</span><span class="simp-desc">Arabic Music/News</span></li>
       <li><span class="simp-source" data-src="https://live-hls-audio-web-aja.getaj.net/VOICE-AJA/01.m3u8">11. Aljazeera</span><span class="simp-desc">Arabic News</span></li>
       <li><span class="simp-source" data-src="https://radio.mp3islam.com/listen/abdulbasit/radio.mp3">12. Radio Quran</span><span class="simp-desc">Quran</span></li>
 
@@ -133,18 +133,18 @@ a,a:hover,a:visited{color:#ddd;text-decoration:none;}
       <li><span class="simp-source" data-src="https://kissfm.kissfmradio.cires21.com/kissfm.mp3">3. Radio Kiss FM</span><span class="simp-desc">Spanish Music</span></li>
       <li><span class="simp-source" data-src="https://playerservices.streamtheworld.com/api/livestream-redirect/LOS40_ASO_GUADIX.mp3">4. Radio Los 40 Madrid</span><span class="simp-desc">Spanish Music</span></li>
       <li><span class="simp-source" data-src="http://server8.emitironline.com:18176/">5. Radio Callao Madrid<span class="simp-desc">Spanish Music</span></span></li>
-      <li><span class="simp-source" data-src="https://net1-cope-rrcast.flumotion.com/cope/net1-low.mp3">6. Radio COPE Madrid</span><span class="simp-desc">Spanish Music and News</span></li>
+      <li><span class="simp-source" data-src="https://net1-cope-rrcast.flumotion.com/cope/net1-low.mp3">6. Radio COPE Madrid</span><span class="simp-desc">Spanish Music/News</span></li>
       <li><span class="simp-source" data-src="https://playerservices.streamtheworld.com/api/livestream-redirect/SER_MAS_MADRID.mp3">7. Radio SER + Madrid<span class="simp-desc">Spanish News</span></span></li>
 
 
       --- English: ----------
 
-      <li><span class="simp-source" data-src="https://ice-sov.musicradio.com/HeartLondonMP3">1. Radio Heart London<span class="simp-desc">LONDON</span></span></li>
+      <li><span class="simp-source" data-src="https://ice-sov.musicradio.com/HeartLondonMP3">1. Radio Heart London<span class="simp-desc">LONDON UK</span></span></li>
       <li><span class="simp-source" data-src="https://countryhits.radioca.st/stream">2. Radio Country Music<span class="simp-desc">Country USA</span></span></li>
       <li><span class="simp-source" data-src="https://kuvo-ice.streamguys1.com/kuvo-mp3-128">3. Radio Jazz Music<span class="simp-desc">Jazz Music USA</span></span></li>
       <li><span class="simp-source" data-src="https://uk4-vn.mixstream.net/:8128/listen.mp3">4. Radio House Music<span class="simp-desc">House Music USA</span></span></li>
-      <li><span class="simp-source" data-src="https://stream.airconnectradio.com/ac192.mp3">5. Radio Air Connect<span class="simp-desc">Music USA</span></span></li>
-      <li><span class="simp-source" data-src="https://playerservices.streamtheworld.com/api/livestream-redirect/NEWSMAX_FM.aac">6. Radio Newsmax USA<span class="simp-desc">News USA</span></span></li>
+      <li><span class="simp-source" data-src="https://playerservices.streamtheworld.com/api/livestream-redirect/CSPANRADIO.mp3">4. Radio CSPAN News<span class="simp-desc">News USA</span></span></li>
+      <li><span class="simp-source" data-src="https://playerservices.streamtheworld.com/api/livestream-redirect/NEWSMAX_FM.aac">5. Radio Newsmax USA<span class="simp-desc">News USA</span></span></li>
     </ul>
   </div>
 </div>    
@@ -499,7 +499,7 @@ if (document.querySelector('#simp')) {
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="vUkXp0bS6a39jVBLtFbFYrkGogt5bnQtO2motpmo99OZ+BjUArJZ+b6T/On+VSSCQaqWNXjmXJOPKRre9jiCn8TW81K3qt0m9Mbl92+Gkvb0jqOqK+zrBlQ1Rk2kIR3r">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="1wyCszyzQbzLR5XgjIa6jo1U4z4CCwCF8bKReWF+/NcRuvhxFjHQEVSpQYXmGDLHrgTEaAlpIRTz7B/Ah/CSzjLvJPUrD6tH5wIb6kSWBphjmjdEXyZd7CRp4l40QQEG">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
