--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=EiWsM0"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=EiWsM0" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=Ncm0n8"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=Ncm0n8" type="text/css">
 
   
   
@@ -32,7 +32,7 @@
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-12 col-md-10 col-lg-12">
-                <div class="carousel slide" id="uWv1peSxA0" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide carousel-fade" id="uWv2OVn7jB" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
                     
                     <div class="carousel-inner">
                         <div class="carousel-item slider-image item active">
@@ -536,7 +536,7 @@ if (document.querySelector('#simp')) {
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="wZEGUPCgRUdd96N+vmWiZlaWu32vXEPRM7xLeF3C0PYbETCFtti5IwgTaGKGj0mbNRnVFqzII0h1ck9c+kR8vLzXZ9oLuFGaymHy6/UGipaPl7IQn6Ck2aHmNje2tuux">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="gI3Hm9jzUjFeIGh3HIDKdAUfo8GaRhLWWPQUqW2iUuyTFNPvtk78dKr6rKQ5YBWITZX1U8yO2pqEsTRboXegv8mWoVugQnmYKDYX8NHSmGYV2pDCkuecm2h5SZIGn0PK">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
