--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=Jb4qZ4"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=Jb4qZ4" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=xx8plv"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=xx8plv" type="text/css">
 
   
   
@@ -500,7 +500,7 @@ if (document.querySelector('#simp')) {
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="4KvFukMq1rud167S92Km8WNNNwlSL+RPZibn2qc+5EFnZT3DKxsmj3u67IJdFAKY4XXVUIfTz0iE7EuoSIsUP8BWMwvduRa3LaZ+E35ZtgxU5nTTzHQxbMQA7cPAOekB">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="n5L4W2xln4LtD/4CrzwHWSj3Xh1ZSmbcMiwYMq8ejPpOCOxYx/mWsB8yOd7MUebAKA0AVRmd+7bvEkpSYyTp/uz+lu6Ptp81D9er8dcFg/uBs+jEz7rDhITei6L28cFn">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
