--- a/page1.html
+++ b/page1.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=7xSg5a"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=7xSg5a" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=LzIcJR"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=LzIcJR" type="text/css">
 
   
   
@@ -126,7 +126,7 @@
 			<div class="modalWindow-container">
 				<div class="modalWindow-video-container">
 					<div class="modalWindow-video">
-						<iframe width="100%" height="100%" frameborder="0" allowfullscreen="1" data-src="https://www.youtube.com/watch?v=gCNeDWCI0vo"></iframe>
+						<iframe width="100%" height="100%" frameborder="0" allowfullscreen="1" data-src="https://www.youtube.com/watch?v=bNyUyrR0PHo"></iframe>
 					</div>
 					<a class="close" role="button" data-dismiss="modal" data-bs-dismiss="modal">
 						<span aria-hidden="true" class="mbr-iconfont mobi-mbri-close mobi-mbri closeModal"></span>
