--- a/page1.html
+++ b/page1.html
@@ -15,11 +15,12 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/animatecss/animate.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=uay60l"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=uay60l" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=EBsIfS"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=EBsIfS" type="text/css">
 
   
   
@@ -63,7 +64,7 @@
 			<div class="col-12 col-lg-8">
 				<div class="box">
 					<div class="mbr-media show-modal align-center" data-modal=".modalWindow">
-						<img src="assets/images/bbc-1200x675.jpg" alt="">
+						<img src="assets/images/bbc-1-1200x675.jpeg" alt="">
 						<div class="icon-wrap">
 							<span class="mbr-iconfont socicon-youtube socicon" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
 						</div>
@@ -108,7 +109,7 @@
 			<div class="col-12 col-lg-8">
 				<div class="box">
 					<div class="mbr-media show-modal align-center" data-modal=".modalWindow">
-						<img src="assets/images/aljazeera-1-1198x674.jpeg" alt="">
+						<img src="assets/images/aljazeera-5-1198x674.jpeg" alt="">
 						<div class="icon-wrap">
 							<span class="mbr-iconfont socicon-youtube socicon" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
 						</div>
@@ -162,5 +163,6 @@
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
