--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/unknown-128x129.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/unknown-128x129-1.png" type="image/x-icon">
   <meta name="description" content="">
   
   
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=kqDqbL"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=kqDqbL" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=UJcJVv"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=UJcJVv" type="text/css">
 
   
   
@@ -500,7 +500,7 @@ if (document.querySelector('#simp')) {
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="hkR/D6ecYFIqdd7cBU+Ji/pONjHhpFuLgKKFi7IXsa3eezMExsaAji8QxVsSLp8XN/5TGLmVSgihOeONSl5CzrBDe1ljrQiNEC1eOUAPkGL8eNxZKpo6tPzYdKcHvNC7">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="B27k74jtmwQqvaLOwsNjAYKsa4aLVQBOBwr4xZUbO3pVsfRisi4ungNSeS8lWmX1mv7vJD3iqFTrW28T/mqjBnwzn5YW0E3UY9vBAVHHEK2nVz+PjkIhIBXI1xB2ePn7">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
