--- a/page1.html
+++ b/page1.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=xTQBha"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=xTQBha" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=K5YB5T"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=K5YB5T" type="text/css">
 
   
   
@@ -63,7 +63,7 @@
 			<div class="col-12 col-lg-6">
 				<div class="box">
 					<div class="mbr-media show-modal align-center" data-modal=".modalWindow">
-						<img src="assets/images/aljazeera-1198x674.jpeg" alt="">
+						<img src="assets/images/aljazeera-1-1198x674.jpeg" alt="">
 						<div class="icon-wrap">
 							<span class="mbr-iconfont socicon-youtube socicon" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
 						</div>
@@ -108,7 +108,7 @@
 			<div class="col-12 col-lg-6">
 				<div class="box">
 					<div class="mbr-media show-modal align-center" data-modal=".modalWindow">
-						<img src="assets/images/cbs20new24-1256x707.jpg" alt="">
+						<img src="assets/images/cbs20new24-1256x707.jpeg" alt="">
 						<div class="icon-wrap">
 							<span class="mbr-iconfont socicon-youtube socicon" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
 						</div>
@@ -153,7 +153,7 @@
 			<div class="col-12 col-lg-6">
 				<div class="box">
 					<div class="mbr-media show-modal align-center" data-modal=".modalWindow">
-						<img src="assets/images/bbc2-1200x675.jpeg" alt="">
+						<img src="assets/images/bbc2-2-1200x675.jpeg" alt="">
 						<div class="icon-wrap">
 							<span class="mbr-iconfont socicon-youtube socicon" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
 						</div>
@@ -198,7 +198,7 @@
 			<div class="col-12 col-lg-6">
 				<div class="box">
 					<div class="mbr-media show-modal align-center" data-modal=".modalWindow">
-						<img src="assets/images/24h-1256x707.jpg" alt="">
+						<img src="assets/images/24h-1256x707.jpeg" alt="">
 						<div class="icon-wrap">
 							<span class="mbr-iconfont socicon-youtube socicon" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
 						</div>
