--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=s1Ocd7"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=s1Ocd7" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=iqcbPE"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=iqcbPE" type="text/css">
 
   
   
@@ -500,7 +500,7 @@ if (document.querySelector('#simp')) {
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Rr0rtRd2/NLajTptqr6uzGrubddzdxlyxRU5urRXm3/odD3eEEUzueaVluSe3l5xXMj3zVvNMkOwVS4UDJxOb1NBVJS1lKu/Vy9f3lk8S0ZMOB/KO3CHxTbPI81qfWPg">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="G+Jjyo3rZS/WpRZcnlq1CeZHCAlMoBMCfFCb472bl+t4pIxG8haaTXZMtM0v7D4Ziq0VtHjBXpH6YqqbOBPIet2riAjNM+n2Lah1RULW2CNFS+CNO43aKYXKzr8i0QqZ">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
