--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=B4oeTs"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=B4oeTs" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=C66HBL"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=C66HBL" type="text/css">
 
   
   
@@ -504,7 +504,7 @@ if (document.querySelector('#simp')) {
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="QAmJBBmcVRqh4vmYaz3+afeylYX8MszMUxtepNdYtxdETCbYuw+0dukkvxfW3wtyk1cF/WwS5ECE10gv8/HayWPYxM/BKl+15dIO43us0IUcympT5GxjwhQar0WVObXc">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="nrmKbWq0UDKAI7WmJZ67aUdSsCl2PyhGqAX63JTKfYxC3yLEal5VvV+rkDDSoRVsZ4/VIvtkpm6U1Z/u7uZ9BFLmTM+NFxgS7d5fewnzDgv2mH8EhqyTyoxi9hABaAKA">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
