--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=TrUoUS"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=TrUoUS" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=ILbhb8"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=ILbhb8" type="text/css">
 
   
   
@@ -504,7 +504,7 @@ if (document.querySelector('#simp')) {
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="HlCXijJWWlK9Ik1TlOjyQ7tkNGULtVuY5emIvRvwaVwSEjtoCFh8rtH6MkELtmAZ8+Zj8FoKsichrzI7KC/JASyx/uxlN0eli9WGJxZm8bBXExaODpBmHASMeAfdrB0=">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="dwW+ODv+UoPHHrNGjIHPR3fFaLgGPyH1Zefc2C8D8bW8LDIrZhQ8PFVCElBmi/PHf8TmYcK5/PqvUwNRUSpL+bAbye89DvGEBqDrlYcWLCYsy+6d6wWYHVCTMoiqUKPT">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
