--- a/page1.html
+++ b/page1.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=iuuQHJ"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=iuuQHJ" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=i3oJ5L"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=i3oJ5L" type="text/css">
 
   
   
@@ -234,7 +234,7 @@
             <h4 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">
               <strong>Video Gallery</strong>
             </h4>
-            
+            <h5 class="mbr-section-subtitle mbr-fonts-style align-center mb-0 mt-4 display-7">More movies coming soon !</h5>
           </div>
         </div>
       </div>
