--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=2GzQuP"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=2GzQuP" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=8iKXeT"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=8iKXeT" type="text/css">
 
   
   
@@ -137,10 +137,10 @@ a,a:hover,a:visited{color:#ddd;text-decoration:none;}
       <li><span class="simp-source" data-src="http://playerservices.streamtheworld.com/api/livestream-redirect/RADIOLE.mp3">2. Radio OLE</span><span class="simp-desc">Spanish Music Garousi</span></li>
       <li><span class="simp-source" data-src="https://kissfm.kissfmradio.cires21.com/kissfm.mp3">3. Radio Kiss FM</span><span class="simp-desc">Spanish Music Garousi</span></li>
       <li><span class="simp-source" data-src="https://playerservices.streamtheworld.com/api/livestream-redirect/LOS40_ASO_GUADIX.mp3">4. Radio Los 40 Madrid</span><span class="simp-desc">Spanish Music Garousi</span></li>
-      <li><span class="simp-source" data-src="http://server8.emitironline.com:18176/">5. Radio Callao Madrid<span class="simp-desc">Spanish Music Garousi</span></span></li>
+      <li><span class="simp-source" data-src="http://server8.emitironline.com:18176/">5. Radio Callao Madrid</span><span class="simp-desc">Spanish Music Garousi</span></li>
       <li><span class="simp-source" data-src="https://net1-cope-rrcast.flumotion.com/cope/net1-low.mp3">6. Radio COPE Madrid</span><span class="simp-desc">Spanish Music/News Garousi</span></li>
-      <li><span class="simp-source" data-src="https://playerservices.streamtheworld.com/api/livestream-redirect/SER_MAS_MADRID.mp3">7. Radio SER + Madrid<span class="simp-desc">Spanish News Garousi</span></span></li>
-
+      <li><span class="simp-source" data-src="https://playerservices.streamtheworld.com/api/livestream-redirect/SER_MAS_MADRID.mp3">7. Radio SER Madrid</span><span class="simp-desc">Spanish News Garousi</span></li>
+      
 
       --- English: ----------
 
@@ -149,7 +149,7 @@ a,a:hover,a:visited{color:#ddd;text-decoration:none;}
       <li><span class="simp-source" data-src="https://countryhits.radioca.st/stream">2. Radio Country Music</span><span class="simp-desc">Country USA Garousi</span></li>
       <li><span class="simp-source" data-src="https://kuvo-ice.streamguys1.com/kuvo-mp3-128">3. Radio Jazz Music</span><span class="simp-desc">Jazz Music USA Garousi</span></li>
       <li><span class="simp-source" data-src="https://uk4-vn.mixstream.net/:8128/listen.mp3">4. Radio House Music</span><span class="simp-desc">House Music USA Garousi</span></li>
-      <li><span class="simp-source" data-src="https://playerservices.streamtheworld.com/api/livestream-redirect/CSPANRADIO.mp3">5. Radio CSPAN News<span class="simp-desc">News USA Garousi</span></span></li>
+      <li><span class="simp-source" data-src="https://playerservices.streamtheworld.com/api/livestream-redirect/CSPANRADIO.mp3">5. Radio CSPAN News</span><span class="simp-desc">News USA Garousi</span></li>
       <li><span class="simp-source" data-src="https://playerservices.streamtheworld.com/api/livestream-redirect/NEWSMAX_FM.aac">6. Radio Newsmax USA</span><span class="simp-desc">News USA Garousi</span></li>
       
 
@@ -513,7 +513,7 @@ if (document.querySelector('#simp')) {
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="J0mNkl1dehOC5+Dohn2nivdOtvleltWOPC2mJOZVQ1DrbIqcSC+I7H4bzGRHavDdxk24tbhXQvp4nPoKwzslTaHc6rMHr0/3inhpl9RuPCwg/XYs4z/ZvhrNDb13Bn8y">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="RPrWbennzj72NjzfqjeX50PAL/tfJgV9969TCfdBsxgkh1pHzlRuHEX+zTC1ZGCnwddlFw+Qhhcq4xBonPtNeAP8ReNChb8HuqniOH5IpHsjfSzW0Xlyo3HvZj9HVDJc">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
