--- a/index.html
+++ b/index.html
@@ -6,19 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/unknown-128x129.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/garousi-128x128.png" type="image/x-icon">
   <meta name="description" content="">
   
   
   <title>Radio Garousi</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=8iKXeT"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=8iKXeT" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=CWTQ1W"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=CWTQ1W" type="text/css">
 
   
   
@@ -513,7 +511,7 @@ if (document.querySelector('#simp')) {
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="RPrWbennzj72NjzfqjeX50PAL/tfJgV9969TCfdBsxgkh1pHzlRuHEX+zTC1ZGCnwddlFw+Qhhcq4xBonPtNeAP8ReNChb8HuqniOH5IpHsjfSzW0Xlyo3HvZj9HVDJc">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="nYLaLiAURdoQCrTtmsbWkfAspoevEB22wk7H5GDyplkY2x4SS7uwpQ+1yfIXuugV6SHgIBSfZRNL0BSnudOLvjNZhWyPFPm+pUQ7dx7vCC8mwQtY09Qs0D6Gsk4Gx1t3">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
