--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=CWTQ1W"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=CWTQ1W" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=m7qINy"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=m7qINy" type="text/css">
 
   
   
@@ -511,7 +511,7 @@ if (document.querySelector('#simp')) {
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="nYLaLiAURdoQCrTtmsbWkfAspoevEB22wk7H5GDyplkY2x4SS7uwpQ+1yfIXuugV6SHgIBSfZRNL0BSnudOLvjNZhWyPFPm+pUQ7dx7vCC8mwQtY09Qs0D6Gsk4Gx1t3">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Yw2SEfCGcw4qL1InYpo1x2z00ftMedyWswOrwknf6lyYY1zkGZjyd4gnp4R1pHVgwNx+DioURlCqE6rZqgWh1CcCCI3RZz8GtKwqlBQSZpf9JBPDp7Mk6I+hX3exPnDV">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
