--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=50bxRN"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=50bxRN" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=jJm96H"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=jJm96H" type="text/css">
 
   
   
@@ -109,7 +109,7 @@ a,a:hover,a:visited{color:#ddd;text-decoration:none;}
       <li><span class="simp-source" data-src="https://ice9.securenetsystems.net/SHADI">8. Radio Shadi</span><span class="simp-desc">Persian Music Garousi</span></li>
       <li><span class="simp-source" data-src="https://stream-171.zeno.fm/2jwyo983y49vv">9. Radio AvazFarsi</span><span class="simp-desc">Persian Music Garousi</span></li>
       <li><span class="simp-source" data-src="https://sarcheshmeh.awsvps.com/stream">10. Radio Sarcheshmeh</span><span class="simp-desc">Persian Music Garousi</span></li>
-      <li><span class="simp-source" data-src="http://voa-16.akacast.akamaistream.net/7/316/322028/v1/ibb.akacast.akamaistream.net/voa-16.m3u">11. Radio Farda</span><span class="simp-desc">Persian Music/News Garousi</span></li>
+      <li><span class="simp-source" data-src="https://stream.radiojar.com/cp13r2cpn3quv">11. Radio Farda</span><span class="simp-desc">Persian Music/News Garousi</span></li>
       <li><span class="simp-source" data-src="https://n0f.radiojar.com/dfnrphnr5f0uv?rj-ttl=5&amp;rj-tok=AAABmSY-oh4AHtmWmjydCeWDsA">12. Radio Iran International</span><span class="simp-desc">Persian News Garousi</span></li>
       <li><span class="simp-source" data-src="https://radio.mp3islam.com/listen/abdulbasit/radio.mp3">13. Radio Quran</span><span class="simp-desc">Quran - Garousi</span></li>
   
@@ -511,7 +511,7 @@ if (document.querySelector('#simp')) {
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="g+Eb6J5wB+Fl7B/R5rkJmEJb3OtytdIo8Wg3sb6/jpDwC0qfXhT0nWy+NWE3D4JUonQo+GIBcz4cj0QyMKCaAcdELyOVLTw6jxyRnFF/Dt4j/seMuxXurIxnLbMtP1ro">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ctaGkMoY9z8qoOawfBvVFIBjO/AC89Z1SE8iwCYnzK9WVBDLfeHskUvwLURuuiNGcS3RC8pVqVNpgoMTX/RX06VIOdPprtVRW7TBHxCyNF3Iv7eguyrg4NV9RCevHCoh">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
